# DuckFaceSynthesizer

./: CMakeLists.txt  README.md  build.bat
installer/: DuckFaceSynth.iss
src/: Sequencer.h  Synth.h  main.cpp
